# HTekDistortion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.json  config.py
effects/: CMakeLists.txt  Distortion.cpp  Distortion.hpp  Effect.hpp  EffectChain.cpp  EffectChain.hpp
effects/tests/: CMakeLists.txt  DistortionTests.cpp
plugin/: CMakeLists.txt
plugin/effects/: CMakeLists.txt  Distortion.cpp  Distortion.hpp  Effect.hpp  EffectChain.hpp
plugin/effects/tests/: CMakeLists.txt  DistortionTests.cpp
plugin/include/HTekDistortion/: PluginEditor.h  PluginProcessor.h
plugin/include/PluginTemplate/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
prototype/: waveshaper.py
